<resources>
    <string name="app_name">UniPics</string>
    <string name="e_mail">E-Mail</string>
    <string name="editTextEnterEmail">Enter your Email</string>
    <string name="password">Password</string>
    <string name="editTextPassword">Enter your Password</string>
    <string name="title_activity_email_password">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_new_account">Create New Account</string>
    <string name="goToRegister">If u don\'t have an account yet, click here to register</string>
    <string name="title_activity_folder">FolderActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="back_to_login">Already have an account? Click here to Login</string>
    <string name="create_folder">Album erstellen</string>
    <string name="name">Name</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="erstellen">Erstellen</string>
    <string name="delete_folder">Album dauerhaft löschen?</string>
    <string name="delete_photo">Foto dauerhaft löschen?</string>
    <string name="delete">Löschen</string>
    <string name="select_from_camera">Kamera</string>
    <string name="select_from_gallery">Gallerie</string>
    <string name="rename">Umbennen</string>
    <string name="ok">Bestätigen</string>
    <string name="new_name">Neuer Name</string>
    <string name="add_note">Notiz hinzufügen</string>
    <string name="emptyTextFolder">Keine Alben?  Du kannst Alben erstellen und darin Fotos aufnehmen und aus der Gallerie hinzufügen</string>
    <string name="emptyTextGallery">Keine Fotos?  Du kannst Fotos aufnehmen und aus der Gallerie hinzufügen</string>

</resources>
